src/objects/Marketing_Non_Funded_Loans__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AmountApproved__c</fullName>
        <label>AmountApproved</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AppDate__c</fullName>
        <label>AppDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AppID__c</fullName>
        <externalId>true</externalId>
        <label>AppID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailAddress__c</fullName>
        <label>EmailAddress</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ExpDateofPreApproval__c</fullName>
        <label>ExpDateofPreApproval</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterestRate__c</fullName>
        <label>InterestRate</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoanType__c</fullName>
        <label>LoanType</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginatedByUser__c</fullName>
        <label>Originated By User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UserEpisysID__c</fullName>
        <formula>RIGHT (OriginatedByUser__c, LEN(OriginatedByUser__c )-FIND(&quot;,&quot;,OriginatedByUser__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserEpisysID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Marketing Non Funded Loans</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LoanType__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Term__c</columns>
        <columns>AppID__c</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>EmailAddress__c</columns>
        <columns>City__c</columns>
        <columns>AmountApproved__c</columns>
        <columns>AppDate__c</columns>
        <columns>ExpDateofPreApproval__c</columns>
        <columns>InterestRate__c</columns>
        <columns>OriginatedByUser__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NFL{00000000}</displayFormat>
        <label>Non Funded Loan</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Non Funded Loans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>